# todo-sqlite-sqlx

./: bun.lockb  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20240308020603_create_tables.sql
src-tauri/src/: lib.rs  main.rs
